Fix sizing and overlap issue with cards in CS grid

--- a/app/assets/stylesheets/5-connect/connect.scss
+++ b/app/assets/stylesheets/5-connect/connect.scss
@@ -10,6 +10,9 @@
   grid-column-gap: 10px;
   grid-row-gap: 10px;
 
+  height: 100%;
+  width: 100%;
+
   text-align: center;
 }
 
